--- a/src/pages/dashboardPages/DashBoardProducts/dproducts.css
+++ b/src/pages/dashboardPages/DashBoardProducts/dproducts.css
@@ -1,20 +1,17 @@
 .dproducts {
-    padding: 56px 72px;
-    padding-bottom: 70px;
-}
-
-.admin-product-control {
-    display: flex;
-    justify-content: space-between;
+  padding: 56px 72px;
+  padding-bottom: 70px;
+  background-position-y: -50%, bottom !important;
+  background-position-x: -80%, right !important;
 }
 
 .admin-pluse-icon {
-    /* font-size: 3rem; */
-    color: black;
-    background-color: white;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
+  /* font-size: 3rem; */
+  color: black;
+  background-color: white;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
 
-    box-shadow: 0px 0px 2px 2px rgb(207, 203, 203);
+  box-shadow: 0px 4px 3px 2px rgb(207, 203, 203);
 }
